--- a/.github/workflows/youth_gain.yml
+++ b/.github/workflows/youth_gain.yml
@@ -1,12 +1,9 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: 中青浏览赚
+name: youth_gain(中青浏览赚)
 
 on:
   workflow_dispatch:
   schedule:
-     - cron: '10 0 * * *'
+     - cron: '08 1,6,22 * * *'
   watch:
     types: youth_gain
 jobs:
@@ -14,8 +11,16 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     env:
-      YOUTH_START: ${{ secrets.YOUTH_START }}
-      YOUTH_END: ${{ secrets.YOUTH_END }}
+      YOUTH_START1: ${{ secrets.YOUTH_START1 }}
+      YOUTH_LOOK1: ${{ secrets.YOUTH_LOOK1 }}
+      YOUTH_START2: ${{ secrets.YOUTH_START2 }}
+      YOUTH_LOOK2: ${{ secrets.YOUTH_LOOK2 }}
+      YOUTH_START3: ${{ secrets.YOUTH_START3 }}
+      YOUTH_LOOK3: ${{ secrets.YOUTH_LOOK3 }}
+      YOUTH_START4: ${{ secrets.YOUTH_START4 }}
+      YOUTH_LOOK4: ${{ secrets.YOUTH_LOOK4 }}
+      YOUTH_START5: ${{ secrets.YOUTH_START5 }}
+      YOUTH_LOOK5: ${{ secrets.YOUTH_LOOK5 }}
     steps:
       - uses: actions/checkout@v1
       - name: Use Node.js 12.x
@@ -26,12 +31,40 @@ jobs:
         run: |
           npm install
           
-      - name: '运行 【中青浏览赚】'
-        if: env.YOUTH_START
+      - name: '运行 【账号一中青浏览赚】'
+        if: env.YOUTH_START1
         run: |
-          node Task/youth_gain.js
+          node youth_gain.js
         env:
-          YOUTH_START: ${{ secrets.YOUTH_START }}
-          YOUTH_END: ${{ secrets.YOUTH_END }}
+          YOUTH_START: ${{ secrets.YOUTH_START1 }}
+          YOUTH_LOOK: ${{ secrets.YOUTH_LOOK1 }}
+       
+      - name: '运行 【账号二中青浏览赚】'
+        if: env.YOUTH_START2
+        run: |
+          node youth_gain.js
+        env:
+          YOUTH_START: ${{ secrets.YOUTH_START2 }}
+          YOUTH_LOOK: ${{ secrets.YOUTH_LOOK2 }}
+      - name: '运行 【账号三中青浏览赚】'
+        if: env.YOUTH_START3
+        run: |
+          node youth_gain.js
+        env:
+          YOUTH_START: ${{ secrets.YOUTH_START3 }}
+          YOUTH_LOOK: ${{ secrets.YOUTH_LOOK3 }}
+      - name: '运行 【账号四中青浏览赚】'
+        if: env.YOUTH_START4
+        run: |
+          node youth_gain.js
+        env:
+          YOUTH_START: ${{ secrets.YOUTH_START4 }}
+          YOUTH_LOOK: ${{ secrets.YOUTH_LOOK4 }}
+      - name: '运行 【账号五中青浏览赚】'
+        if: env.YOUTH_START5
+        run: |
+          node youth_gain.js
+        env:
+          YOUTH_START: ${{ secrets.YOUTH_START5 }}
+          YOUTH_LOOK: ${{ secrets.YOUTH_LOOK5 }}
 
-   
